# bryan-dashboard

./: .env.example  .gitignore  Cargo.toml  Dioxus.toml  PLAN.md  README.md  TODO.md  TODO_FUTURE.md
.devcontainer/: devcontainer.json
assets/: main.css
docs/: ADDING_FORMULAS.md
src/: main.rs
src/eth/: eip6963.rs  mod.rs
src/formula/: ast.rs  eval.rs  graph.rs  lexer.rs  mod.rs  parser.rs  registry.rs  rewrite.rs
src/model/: cell.rs  mod.rs  settings.rs  sheet.rs  table.rs  workbook.rs
src/persistence/: mod.rs
src/ui/: buddy.rs  cell_view.rs  confirm_modal.rs  func_sidebar.rs  grid.rs  mod.rs  settings_pane.rs  shell.rs  starfield.rs  tabs.rs
