[package]
name = "bryan-dashboard"
version = "0.1.0"
authors = ["Bryan Stitt <bryan@stitthappens.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "1.7.3", default-features = false }
dioxus = { version = "0.7.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "console",
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Document",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "FileReader",
    "FileList",
    "File",
    "ProgressEvent",
    "EventTarget",
    "Request",
    "RequestInit",
    "Response",
    "Headers",
    "HtmlCanvasElement",
    "HtmlElement",
    "CssStyleDeclaration",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "Element",
] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
futures-channel = "0.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
